Fix form error wrap

--- a/src/components/form.scss
+++ b/src/components/form.scss
@@ -185,10 +185,11 @@
 }
 
 .form__error {
-  display: inline-block;
+  display: block;
 
   padding: var(--rm-space-2x-small) var(--rm-space-x-small);
-  margin-left: var(--rm-space-x-small); // Is there a future solution with gap possible here?
+  margin-top: var(--rm-space-x-small); // Is there a future solution with gap possible here?
+  width: fit-content;
 
   background: var(--rm-color-alerts-danger-plus-2);
   color: var(--rm-color-alerts-danger-on-plus-2);
